# crawler-ik

./: Brent.py  CMakeLists.txt  JetsonIK.py  Kinematics.py  MathUtils.py  TestSearch.py  TestSerialCom.py  angles_phi.txt  bfgs.ipynb  crawler-ik.code-workspace
config/: crawler.def.cfg
cpp/: CMakeLists.txt
cpp/libs/serialib/: Serialib.cpp  Serialib.h
cpp/src/: CrawlerCPP.cpp
cpp/src/brain/: Brain.cpp  Brain.h  EmptyBrain.cpp  EmptyBrain.h  SurferBrain.cpp  SurferBrain.h
cpp/src/comm/: SerialStream.cpp  SerialStream.h
cpp/src/core/: Config.cpp  Config.h  Log.cpp  Log.h  Time.cpp  Time.h
cpp/src/math/: Mathf.cpp  Mathf.h
cpp/src/parts/: XYZServo.cpp  XYZServo.h  XYZServoManager.cpp  XYZServoManager.h
cpp/src/robot/: Joint.cpp  Joint.h  Leg.cpp  Leg.h  Robot.cpp  Robot.h
cpp/src/util/: HardwareButton.cpp  HardwareButton.h  Strings.cpp  Strings.h
cpp/test/: TestEigen.cpp  TestSerialCom.cpp  TestTime.cpp
old/: angles_surfer2.txt  angles_ultrasurfer.txt  gd.ipynb  iksearch.ipynb  train.ipynb
